Bug #5216
failover error: cannot share pool/folder - smb add share failed
100%
Description
Reproduced on NexentaStor with RSF from highavailability.com
On the first fail-over of the system, this error appears.
It's related to SMB service startup on the 2nd head.
Ref. Nexenta 7930
Updated by Gordon Ross over 6 years ago
From Daniil Lunev:
Problem is that there is the race condition between libshare and smf. Libshare starts smb service, but it can go forward with sharing before smf actually begins work with service. cr3848 fixes this race and eliminates errors masking. It will wait for server up to 15 second. If server gets online during this 15 second, then everything is ok. If not, then we propogate error to the upper level. Having this error returned, upper level sets up return code with error, but tries to share other datasets (until datasets is over, service gets online, service gets maintained (one of that)).
Updated by Electric Monk over 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit f4427914317470f516ca69daaed90f7efb3d76dc
commit f4427914317470f516ca69daaed90f7efb3d76dc Author: Daniil Lunev <daniil.lunev@nexenta.com> Date: 2014-11-11T03:42:09.000Z 5216 failover error: cannot share pool/folder - smb add share failed Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Vitaliy Gusev <vitaliy.gusev@nexenta.com> Reviewed by: Boris Protopopov <boris.protopopov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>