5216 failover error: cannot share pool/folder - smb add share failed Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Vitaliy Gusev <vitaliy.gusev@nexenta.com> Reviewed by: Boris Protopopov <boris.protopopov@nexenta.com> Approved by: Robert Mustacchi <rm@joyent.com>